# opengl-coding

./: README.md
gl_geometry_shader/: CMakeLists.txt
gl_geometry_shader/src/: Circle.cpp  Circle.h  ContextWrapper.h  common.h  gl_geometry_shader.cpp  gl_geometry_shader_glfw.cpp  point.h
glumpy_samples/: cube.py  test_freetype.py
mandelbrot/: mandelbrot.py
photo-fading/: photo-fading.py  test_face_detect.py  test_simple_quad.py
